# openclaw-council

./: README.md  SKILL.md  pyproject.toml
docs/: architecture.md  feature-status.md  openclaw-plugin-tool-catalog.md
examples/: README.md  alpha-round-1.md
examples/sample-live/: state.json  transcript.md
examples/sample-research/: state.json  transcript.md
examples/sample-standard/: state.json  transcript.md
plugin/: openclaw.plugin.json  package.json
plugin/skills/openclaw-council-native/: SKILL.md
plugin/src/: index.ts
src/openclaw_council/: cli.py  openclaw_runtime.py
tests/: test_cli.py  test_openclaw_runtime.py
