[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-council"
version = "0.2.1"
description = "OpenClaw-friendly multi-agent council orchestration with transcripts, resume, and synthesis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Carlos + OpenClaw"}
]
keywords = ["openclaw", "agents", "multi-agent", "council", "skill"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
openclaw-council = "openclaw_council.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
